Customize some values
- config
- font
- sidebar
- css

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -9,14 +9,9 @@
       <span class="w">B</span>
       <span class="b">C</span>
      -->
-     <span class="b">A</span>
-     <span class="b">R</span>
-     <span class="b">T</span>
-     <span class="w">I</span>
-     <span class="w">F</span>
-     <span class="b">A</span>
-     <span class="b">C</span>
-     <span class="b">T</span>
+     <span class="w">블</span>
+     <span class="w">로</span>
+     <span class="b">구</span>
   </a>
   <a class="me square site-nav-switch clearfix">
     <span class="b">
