--- a/layout/_partial/sidebar.ejs
+++ b/layout/_partial/sidebar.ejs
@@ -32,9 +32,9 @@
 	      <img src="<%- url_for(theme.author_avatar) %>" />
 	    </div>
 	    <div class="info">
-	      <a class="name dark-btn" href="<%- url_for('/about') %>">
+	      <div>
 	        <%- config.author %>
-	      </a>
+	      </div>
 	    </div>
 	    <div class="info">
 	      <span class="item desc">
@@ -59,15 +59,19 @@
 	</div>
 
 	<div class="shortcuts">
+    <!--
 		<a href="#header" class="top window-nav dark-btn" id="go-top">
 			<span class="icon icon-chevron-thin-up"></span>
 		</a>
+    -->
 		<a class="close dark-btn" id="sidebar-close">
 			<span class="icon icon-close"></span>
 		</a>
+    <!--
 		<a href="#footer" class="top window-nav dark-btn" id="go-bottom">
 			<span class="icon icon-chevron-thin-down"></span>
 		</a>
+    -->
 	</div>
 
 </div>
