--- a/source/style/content.scss
+++ b/source/style/content.scss
@@ -205,7 +205,7 @@
 .article-tags {
   margin-bottom: 30px;
 
-  .tag-link {
+  .tag-none-link {
     position: relative;
     display: inline-block;
     padding: 4px 10px 6px 10px;
