--- a/source/style/variables.scss
+++ b/source/style/variables.scss
@@ -1,5 +1,5 @@
 $fallback-font-family: Helvetica, Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", Microsoft JhengHei, WenQuanYi Micro Hei, "Microsoft YaHei", sans-serif;
-$base-font-family: "Oswald", $fallback-font-family;
+$base-font-family: "Lato", "Oswald", $fallback-font-family;
 $code-font-family: "inconsolata", Consolas, monospace, sans-serif;
 $article-font-family: "Crimson Text", $fallback-font-family;
 
