--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -25,7 +25,8 @@
   <% } %>
   
 	<!-- If needed, replace your own web font service -->
-  <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Inconsolata|Oswald" rel="stylesheet" />
+  <!-- <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Inconsolata|Oswald" rel="stylesheet" /> -->
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 
   <% if (theme.google_analytics) { %>
      <script async src="https://www.googletagmanager.com/gtag/js?id=<%= theme.google_analytics %>"></script>
